# sber_fastApi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prestart.sh  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 5d8eb1dcf39d_first_migration.py
app/: backend_prestart.py  initial_data.py  main.py  quiz.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  recruit.py  users.py
app/core/: auth.py  config.py  security.py
app/crud/: base.py  crud_stack.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/models/: stack.py  users.py
app/schemas/: quiz.py  rate.py  stack.py  users.py
app/services/: rate.py  recruit.py
tests/: conftest.py
tests/api/api_v1/: test_login.py  test_recruit.py  test_users.py
tests/services/: test_rate.py  test_recruit.py
tests/utils/: utils.py
